--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.41'
-    ext.lifecycle_version = '1.1.1'
-    ext.room_version = "1.1.0"
+
+    ext {
+        kotlin_version = '1.2.41'
+        lifecycle_version = '1.1.1'
+        room_version = '1.1.0'
+        rxjava_version='2.1.1'
+    }
+
     repositories {
         google()
         jcenter()
